# turtle-api/app/controllers/role.go
@@ -1,1 +1,14 @@
 package controllers
+
+import "github.com/astaxie/beego"
+
+// RoleController struct, Operation for role
+type RoleController struct {
+	beego.Controller
+}
+
+// @Title Get all roles
+// @router / [get]
+func (rs *RoleController) GetAlliRoles() {
+
+}
